# momentos_hu_zernike

./: .gitignore  README.md  clasificacion-de-objetos.ipynb  descriptors_train.txt  flavia-shape-signature.ipynb
momentos_hu_zernike/: settings.gradle.kts
momentos_hu_zernike/app/: build.gradle.kts
momentos_hu_zernike/app/src/androidTest/java/com/example/momentos_hu_zernike/: ExampleInstrumentedTest.kt
momentos_hu_zernike/app/src/main/: AndroidManifest.xml
momentos_hu_zernike/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
momentos_hu_zernike/app/src/main/java/com/example/momentos_hu_zernike/: DrawingView.kt  MainActivity.kt
momentos_hu_zernike/app/src/main/res/layout/: activity_main.xml
momentos_hu_zernike/app/src/main/res/raw/: descriptors_train.txt
momentos_hu_zernike/app/src/main/res/values/: strings.xml  themes.xml
momentos_hu_zernike/app/src/main/res/values-night/: themes.xml
momentos_hu_zernike/app/src/test/java/com/example/momentos_hu_zernike/: ExampleUnitTest.kt
momentos_hu_zernike/gradle/: libs.versions.toml
momentos_hu_zernike/gradle/wrapper/: gradle-wrapper.properties
